--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,6 @@
-server.port=8081
-
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-
+# main properties file
+spring.application.name=spring-boot-crud
+spring.profiles.active=local
+data.exception.message1=Resource Not Found!
+data.exception.message2=Resource Already Exists!
 management.endpoints.web.exposure.include=info, health
